# django_p37

./: .gitignore  pyproject.toml
apps/: admin.py  context_processor.py  forms.py  models.py  urls.py  views.py
media/student/2026/03/d/: P37_MuhammadDovudXoja_Zokirxojayev.txt  P37_v4__MuhammadDovudXoja_Zokirxojayev.txt
root/: settings.py  urls.py
templates/admin/: base_site.html
templates/apps/: base.html  checkout.html  product-details.html  product-grid.html  shopping-cart.html  test.html  test4.html  todo.html  todo_detail.html
templates/apps/auth/: login.html  logout.html  register.html
