[project]
name = "django-p37"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "config>=0.5.1",
    "django>=6.0.3",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
